Talk: Fix layout issue and the bug in Done

--- a/src/css/Talk.css
+++ b/src/css/Talk.css
@@ -2,13 +2,8 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  border: 1px solid dodgerblue;
   justify-content: space-between;
   align-items: space-between;
-  /* background: url("/assets/Artboard 1 1.svg");
-  background-size: 250px;
-  background-repeat: no-repeat;
-  background-position: -10px -35px; */
 }
 
 .choice-group {
@@ -16,10 +11,11 @@
   max-height: 100px;
 }
 
-.choice-group > p,
+.choice-group p,
 .added-choice {
   padding: 0;
   margin: 0;
+  font-size: 1.3rem;
 }
 
 .choice-container {
@@ -33,25 +29,27 @@
   font-size: 1rem;
   width: 100%;
   height: 89px;
-  padding: 0;
   margin: 0;
   align-items: center;
 }
 
 .talk-group__table td {
-  border: 1px solid grey;
   border-radius: 3px;
+  padding: 0;
+  border-bottom: 1px solid dodgerblue;
 }
 
 .talk-controls {
-  width: 60%;
+  width: 90%;
   display: flex;
   justify-content: space-between;
   grid-column: 1 / span 2;
 }
 
+
 .talk-edge {
   align-self: end;
+  justify-self: end;
 }
 
 .grid-2x2 {
